--- a/LearningEnglishWeb/appsettings.json
+++ b/LearningEnglishWeb/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=learningEnglishDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
