Вынос логики по работе со словарем в новый api

--- a/LearningEnglishWeb/LearningEnglishWeb.csproj
+++ b/LearningEnglishWeb/LearningEnglishWeb.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.4" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\VocabularyApi\VocabularyApi.csproj" />
+  </ItemGroup>
+
 </Project>
