--- a/LearningEnglishWeb/appsettings.json
+++ b/LearningEnglishWeb/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LearningEnglishIdentityDb;Trusted_Connection=True;"
+    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Database=LearningEnglishIdentityDb;Trusted_Connection=True;",
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LearningEnglishDb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
