Road to IdentityServer4

--- a/LearningEnglishWeb/appsettings.json
+++ b/LearningEnglishWeb/appsettings.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     "IdentityConnection": "Server=LUTIJPC\\SQLEXPRESS; Database=LearningEnglishIdentityDb; User Id=webuser;Password=123"
   },
-  "VocabularyUrl": "http://localhost:8181/api/vocubalry",
-  "WordImageUrl": "http://localhost:8181/api/wordImage",
+  "VocabularyUrl": "https://localhost:8080/api/vocubalry",
+  "WordImageUrl": "https://localhost:8080/api/wordImage",
   "SpeachUrl": "http://localhost:8010/api/speach",
   "Logging": {
     "LogLevel": {
