redirect from mvc to identityServer

--- a/IdentityApi/appsettings.json
+++ b/IdentityApi/appsettings.json
@@ -1,5 +1,6 @@
 {
   "ConnectionString": "Server=LUTIJPC\\SQLEXPRESS; Database=IdentityDb; User Id=webuser;Password=123",
+  "MvcClient":  "http://localhost:8001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
