--- a/LearningEnglishWeb/appsettings.json
+++ b/LearningEnglishWeb/appsettings.json
@@ -1,10 +1,9 @@
 {
-  "ConnectionStrings": {
-    "IdentityConnection": "Server=LUTIJPC\\SQLEXPRESS; Database=LearningEnglishIdentityDb; User Id=webuser;Password=123"
-  },
   "VocabularyUrl": "https://localhost:8080/api/vocubalry",
   "WordImageUrl": "https://localhost:8080/api/wordImage",
   "SpeachUrl": "http://localhost:8010/api/speach",
+  "IdentityUrl": "http://localhost:8005",
+  "CallBackUrl": "http://localhost:8001",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
