--- a/LearningEnglishWeb/appsettings.json
+++ b/LearningEnglishWeb/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "VocabularyUrl": "https://localhost:8080/api/vocubalry",
-  "WordImageUrl": "https://localhost:8080/api/wordImage",
+  "VocabularyUrl": "http://localhost:8181/api/vocubalry",
+  "WordImageUrl": "http://localhost:8181/api/wordImage",
   "SpeachUrl": "http://localhost:8010/api/speach",
   "IdentityUrl": "http://localhost:8005",
   "CallBackUrl": "http://localhost:8001",
