--- a/VocabularyApi/appsettings.json
+++ b/VocabularyApi/appsettings.json
@@ -1,7 +1,6 @@
 {
-
+  "IdentityUrl": "http://localhost:8005",
   "ConnectionStrings": {
-    "IdentityConnection": "Server=LUTIJPC\\SQLEXPRESS; Database=LearningEnglishIdentityDb; User Id=webuser;Password=123",
     "DefaultConnection": "Server=LUTIJPC\\SQLEXPRESS; Database=LearningEnglishDb;User Id=webuser;Password=123"
   },
   "Logging": {
