add identity to angular

--- a/IdentityApi/appsettings.json
+++ b/IdentityApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionString": "Server=LUTIJPC\\SQLEXPRESS; Database=IdentityDb; User Id=webuser;Password=123",
-  "MvcClient":  "http://localhost:8001",
+  "MvcClient": "http://localhost:8001",
+  "SpaClient": "http://localhost:53537",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
