--- a/LearningEnglishSpa/appsettings.json
+++ b/LearningEnglishSpa/appsettings.json
@@ -1,10 +1,12 @@
 {
+  "IdentityUrl": "http://localhost:8005",
+  "VocabularyUrl": "http://localhost:8181/api/vocubalry",
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
-"AllowedHosts": "*"
+    }
+  },
+  "AllowedHosts": "*"
 }
