spa - collect word training + image

--- a/LearningEnglishSpa/appsettings.json
+++ b/LearningEnglishSpa/appsettings.json
@@ -1,6 +1,7 @@
 {
   "IdentityUrl": "http://localhost:8005",
   "VocabularyUrl": "http://localhost:8181/api/vocubalry",
+  "WordImageUrl": "http://localhost:8181/api/wordImage",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
