refactoring mvc + audio in angular

--- a/LearningEnglishSpa/appsettings.json
+++ b/LearningEnglishSpa/appsettings.json
@@ -2,6 +2,7 @@
   "IdentityUrl": "http://localhost:8005",
   "VocabularyUrl": "http://localhost:8181/api/vocubalry",
   "WordImageUrl": "http://localhost:8181/api/wordImage",
+  "SpeechUrl": "http://localhost:8010/api/speech",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
