--- a/LearningEnglishWeb/appsettings.json
+++ b/LearningEnglishWeb/appsettings.json
@@ -1,7 +1,7 @@
 {
   "VocabularyUrl": "http://localhost:8181/api/vocubalry",
   "WordImageUrl": "http://localhost:8181/api/wordImage",
-  "SpeachUrl": "http://localhost:8010/api/speach",
+  "SpeachUrl": "http://localhost:8010/api/speech",
   "IdentityUrl": "http://localhost:8005",
   "CallBackUrl": "http://localhost:8001",
   "Logging": {
