--- a/LearningEnglishSpa/ClientApp/package.json
+++ b/LearningEnglishSpa/ClientApp/package.json
@@ -25,6 +25,7 @@
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
+    "font-awesome": "^4.7.0",
     "jquery": "3.4.1",
     "ng-click-outside": "^6.0.0",
     "oidc-client": "^1.10.1",
