--- a/SpeachApi/packages.config
+++ b/SpeachApi/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.WebApi2" version="5.0.0" targetFramework="net461" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc.ru" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
@@ -16,6 +17,7 @@
   <package id="Microsoft.AspNet.WebApi.Client.ru" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.Core.ru" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.7" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebApi.WebHost.ru" version="5.2.7" targetFramework="net472" />
