--- a/LearningEnglishWeb/appsettings.json
+++ b/LearningEnglishWeb/appsettings.json
@@ -1,5 +1,6 @@
 {
   "VocabularyUrl": "http://localhost:8181/api/vocubalry",
+  "WordSetUrl": "http://localhost:8181/api/wordset",
   "WordImageUrl": "http://localhost:8181/api/wordImage",
   "SpeachUrl": "http://localhost:8010/api/speech",
   "IdentityUrl": "http://localhost:8005",
