--- a/LearningEnglishSpa/appsettings.json
+++ b/LearningEnglishSpa/appsettings.json
@@ -1,6 +1,6 @@
 {
   "IdentityUrl": "http://localhost:8005",
-  "VocabularyUrl": "http://localhost:8181/api/vocubalry",
+  "VocabularyUrl": "http://localhost:8181/api/vocabulary",
   "WordImageUrl": "http://localhost:8181/api/wordImage",
   "SpeechUrl": "http://localhost:8010/api/speech",
   "Logging": {
