--- a/LearningEnglishWeb/appsettings.json
+++ b/LearningEnglishWeb/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "VocabularyUrl": "http://localhost:8181/api/vocubalry",
+  "VocabularyUrl": "http://localhost:8181/api/vocabulary",
   "WordSetUrl": "http://localhost:8181/api/wordset",
   "WordImageUrl": "http://localhost:8181/api/wordImage",
   "SpeachUrl": "http://localhost:8010/api/speech",
