--- a/Web/LearningEnglishSpa/ClientApp/package.json
+++ b/Web/LearningEnglishSpa/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "echo hello && ng serve",
     "build": "ng build",
     "build:ssr": "ng run LearningEnglishSpa:server:dev",
     "test": "ng test",
@@ -12,37 +12,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "8.2.12",
-    "@angular/common": "8.2.12",
-    "@angular/compiler": "8.2.12",
-    "@angular/core": "8.2.12",
-    "@angular/forms": "8.2.12",
-    "@angular/platform-browser": "8.2.12",
-    "@angular/platform-browser-dynamic": "8.2.12",
-    "@angular/platform-server": "8.2.12",
-    "@angular/router": "8.2.12",
+    "@angular/animations": "9.1.1",
+    "@angular/common": "9.1.1",
+    "@angular/compiler": "9.1.1",
+    "@angular/core": "9.1.1",
+    "@angular/forms": "9.1.1",
+    "@angular/platform-browser": "9.1.1",
+    "@angular/platform-browser-dynamic": "9.1.1",
+    "@angular/platform-server": "9.1.1",
+    "@angular/router": "9.1.1",
     "@ngu/carousel": "^2.0.3",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.4",
     "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
     "jquery": "3.4.1",
     "ng-click-outside": "^6.0.0",
     "oidc-client": "^1.10.1",
     "popper.js": "^1.16.1",
     "rxjs": "^6.5.4",
-    "zone.js": "0.9.1"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.25",
-    "@angular/cli": "8.3.14",
-    "@angular/compiler-cli": "8.2.12",
-    "@angular/language-service": "8.2.12",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular/cli": "9.1.1",
+    "@angular/compiler-cli": "9.1.1",
+    "@angular/language-service": "9.1.1",
     "@types/jasmine": "^3.4.6",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "~12.11.6",
-    "codelyzer": "^5.2.1",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -50,7 +52,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.5.2",
-    "typescript": "3.5.3"
+    "typescript": "3.8.3"
   },
   "optionalDependencies": {
     "node-sass": "^4.12.0",
