--- a/Web/LearningEnglishWeb/appsettings.json
+++ b/Web/LearningEnglishWeb/appsettings.json
@@ -3,7 +3,7 @@
   "TrainingUrl": "http://localhost:8181/api/training",
   "WordSetUrl": "http://localhost:8181/api/wordset",
   "WordImageUrl": "http://localhost:8181/api/wordImage",
-  "SpeachUrl": "http://localhost:8010/api/speech",
+  "SpeechUrl": "http://localhost:8010/api/speech",
   "IdentityUrl": "http://localhost:8005",
   "CallBackUrl": "http://localhost:8001",
   "Logging": {
