--- a/Tests/SpeechApi.UnitTests/SpeechApi.UnitTests.csproj
+++ b/Tests/SpeechApi.UnitTests/SpeechApi.UnitTests.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SpeachLogicTest.cs" />
+    <Compile Include="SpeechLogicTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
