--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Android/LearningEnglishMobile.Android.csproj
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Android/LearningEnglishMobile.Android.csproj
@@ -86,13 +86,22 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
+    <AndroidResource Include="Resources\drawable-hdpi\app_settings.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LearningEnglishMobile.Core\LearningEnglishMobile.Core.csproj">
       <Project>{02000f21-5acf-4d06-b576-64c7ca5dd09e}</Project>
       <Name>LearningEnglishMobile.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xhdpi\app_settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable-xxhdpi\app_settings.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\drawable\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
