Mobile Vocabulary TemplateUI

--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/LearningEnglishMobile.Core.csproj
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/LearningEnglishMobile.Core.csproj
@@ -41,6 +41,9 @@
     <EmbeddedResource Update="Views\TranslateWordTrainingView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\UserWordsView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\VocabularyView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
