--- a/Services/IdentityApi/appsettings.json
+++ b/Services/IdentityApi/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionString": "Server=LUTIJPC\\SQLEXPRESS; Database=IdentityDb; User Id=webuser;Password=123",
   "MvcClient": "http://localhost:8001",
   "SpaClient": "http://localhost:53537",
+  "XamarinCallback": "http://localhost:5105/xamarincallback",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
