--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Android/LearningEnglishMobile.Android.csproj
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Android/LearningEnglishMobile.Android.csproj
@@ -61,6 +61,7 @@
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <AndroidResource Include="Resources\xml\network_security_config.xml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
