--- a/Web/LearningEnglishSpa/appsettings.json
+++ b/Web/LearningEnglishSpa/appsettings.json
@@ -1,6 +1,7 @@
 {
   "IdentityUrl": "http://localhost:8005",
   "VocabularyUrl": "http://localhost:8181/api/vocabulary",
+  "TrainingUrl": "http://localhost:8181/api/training",
   "WordImageUrl": "http://localhost:8181/api/wordImage",
   "SpeechUrl": "http://localhost:8010/api/speech",
   "Logging": {
