--- a/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/LearningEnglishMobile.Core.csproj
+++ b/Mobile/LearningEnglishMobile/LearningEnglishMobile.Core/LearningEnglishMobile.Core.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="IdentityModel" Version="4.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="PCLCrypto" Version="2.0.147" />
+    <PackageReference Include="Syncfusion.Xamarin.Core" Version="18.1.0.46" />
+    <PackageReference Include="Xam.Plugins.TextToSpeech" Version="4.0.0.7" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
