fix bugs on web

--- a/Web/LearningEnglishWeb/appsettings.json
+++ b/Web/LearningEnglishWeb/appsettings.json
@@ -1,5 +1,6 @@
 {
   "VocabularyUrl": "http://localhost:8181/api/vocabulary",
+  "ImportVocabularyUrl": "http://localhost:8181/api/importVocabulary",
   "TrainingUrl": "http://localhost:8181/api/training",
   "WordSetUrl": "http://localhost:8181/api/wordset",
   "WordImageUrl": "http://localhost:8181/api/wordImage",
