--- a/Tests/VocabularyApi.IntegrationTests/VocabularyApi.IntegrationTests.csproj
+++ b/Tests/VocabularyApi.IntegrationTests/VocabularyApi.IntegrationTests.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Services\VocabularyApi\VocabularyApi.csproj" />
+    <ProjectReference Include="..\..\Services\VocabularyApi\VocabularyApi.csproj" />
   </ItemGroup>
 
 </Project>
